--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,9 @@
     <footer class="text-center py-3 mt-5">
         <p class="mb-0">&copy; 2025 <strong>Quiz App</strong> | Built with ❤️ by Jroshan</p>
         <small><a href="https://github.com/jroshancode" target="_blank"><i class="bi bi-github"></i> GitHub</a></small>
+        <small><a href="https://linkedin.com/in/roshan-jha-tech" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a></small>
+        <small><a href="https://www.youtube.com/@tech_jroshan" target="_blank"><i class="bi bi-youtube"></i> Youtube</a></small>
+        <small><a href="https://instagram.com/tech_jroshan/" target="_blank"><i class="bi bi-instagram"></i> Instagram</a></small>
     </footer>
 
     <!-- JS -->
